force-app/main/default/objects/sObjectTriggerAction__mdt/sObjectTriggerAction__mdt.object-meta.xml
<CustomObject>
    <label>sObject Trigger Action</label>
    <pluralLabel>sObject Trigger Actions</pluralLabel>
</CustomObject>