force-app/main/default/objects/sObjectTriggerAction__mdt/fields/BypassHandler__c.field-meta.xml
<CustomField>
    <fullName>BypassHandler__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable/Disable Bypass for the activities like migration</inlineHelpText>
    <label>Bypass Handler</label>
    <type>Checkbox</type>
</CustomField>