force-app/main/default/objects/sObjectTriggerAction__mdt/fields/BypassUser__c.field-meta.xml
<CustomField>
    <fullName>BypassUser__c</fullName>
    <label>Bypass User</label>
    <length>2768</length>
    <type>LongTextArea</type>
</CustomField>