force-app/main/default/objects/sObjectTriggerAction__mdt/fields/ExecutionOrder__c.field-meta.xml
<CustomField>
    <fullName>ExecutionOrder__c</fullName>
    <inlineHelpText>The order in which the Trigger Handler should execute</inlineHelpText>
    <label>Execution Order</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>