force-app/main/default/objects/sObjectTriggerAction__mdt/fields/HandlerClassName__c.field-meta.xml
<CustomField>
    <fullName>HandlerClassName__c</fullName>
    <inlineHelpText>The name of the Handler class which is using this framework</inlineHelpText>
    <label>Handler Class Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>