force-app/main/default/objects/sObjectTriggerAction__mdt/fields/Is_After_Delete__c.field-meta.xml
<CustomField>
    <fullName>Is_After_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is After Delete</label>
    <type>Checkbox</type>
</CustomField>