force-app/main/default/objects/sObjectTriggerAction__mdt/fields/Is_Before_Update__c.field-meta.xml
<CustomField>
    <fullName>Is_Before_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Before Update</label>
    <type>Checkbox</type>
</CustomField>