force-app/main/default/objects/sObjectTriggerAction__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable/Disable the Handler Class</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>